--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -25,6 +25,10 @@
         font-weight: 400;
         
     }
+    &__form{
+        display: flex;
+        align-items: center;
+    }
     &__input{
         border: none;
         border-radius: 20px;
@@ -38,17 +42,18 @@
         color: rgb(0, 0, 0);
         cursor: pointer;
         margin-left: 10px;
-        width: 30px;
-        height: 30px;
+        width: 10px;
+        height: 10px;
+        padding: 10px;
         transition: 0.2s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         &:hover{
             background-color: #e4fc98;
             transition: 0.5s;
             transform: scale(1.2);
 
-        }
-        &::before{
-            content: "\f0a9";
         }
     }
 
