--- a/src/components/list/List.scss
+++ b/src/components/list/List.scss
@@ -16,6 +16,7 @@
         cursor: pointer;
         transform: rotate(-90deg);
         transition: 1s;
+        z-index: 100;
         &:hover{
             color: #e5f6b0;
             transform: translateY(10px) scale(1.05) rotate(-90deg);
@@ -39,6 +40,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
         background-color: #202125;
     }
     &__title{
@@ -132,18 +134,22 @@
 
 @media screen and (max-width: 470px) {
     .list{
-        &__container{
-            max-width: 300px;
+        &__title{
+            font-size: 9vw;
         }
-        &__card{
-            width: 100%;
+        &__inner{
+            padding: 0;
         }
         &__card-img{
-            width: 90%;
-            height: 300px;
+            width: 94%;
+            height: 60vw;
+            &:hover{
+                transform: none;
+            }
         }
         &__card-title{
             width: 93%;
+            font-size: 20px;
         }
     }
 }
