--- a/src/components/list/List.scss
+++ b/src/components/list/List.scss
@@ -94,6 +94,9 @@
     font-size: 40px;
     color: #ffffff;
 }
+.pad{
+    padding: 0 10px;
+}
 
 @media screen and (max-width: 1050px) {
     .list{
