--- a/src/components/anime/Anime.scss
+++ b/src/components/anime/Anime.scss
@@ -33,6 +33,12 @@
         margin-bottom: 100px;
         width: 100%;
         height: 555px;
+        &-title{
+            color: #ffffff;
+            text-align: center;
+            font-size: 24px;
+            padding-bottom: 20px;
+        }
         
     }
     &__info{
@@ -41,7 +47,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
         color: #fff;
-        margin-bottom: 50px;
+        margin-bottom: 100px;
     }
     &__img{
         width: 22%;
@@ -65,6 +71,10 @@
             color: #cae962;
         }
     }
+}
+
+.cae962{
+    color: #cae962;
 }
 
 @media screen and (max-width: 1100px){
