--- a/src/components/list/List.scss
+++ b/src/components/list/List.scss
@@ -191,6 +191,8 @@
     .list {
         &__title {
             font-size: 9vw;
+            padding: 25px 12px;
+            padding-top: 0px;
         }
 
         &__inner {
