--- a/src/components/filters/Filters.scss
+++ b/src/components/filters/Filters.scss
@@ -100,7 +100,7 @@
             overflow: auto;
         }
         &__sort{
-            min-height: 45px;
+            font-size: 16px;
         }
     }
 }
