--- a/src/components/list/List.scss
+++ b/src/components/list/List.scss
@@ -3,8 +3,8 @@
     position: relative;
     top: 60px;
     background-color: #202125;
-    min-height: 100vh;
-    padding-bottom: 100vh;
+    min-height: 200vh;
+    padding-bottom: 100px;
     &__arrow {
         width: 40px;
         position: fixed;
