--- a/src/components/list/List.scss
+++ b/src/components/list/List.scss
@@ -43,7 +43,7 @@
     }
 
     &__title {
-        margin: 0;
+        margin: 50px 0 0 0;
         padding: 50px 12px;
         color: #cae962;
         font-size: 42px;
@@ -142,8 +142,8 @@
         }
 
         &__title {
-            font-size: 44px;
-            margin: 50px 0;
+            font-size: 40px;
+            margin-top: 30px;
         }
 
         &__card {
@@ -160,6 +160,10 @@
 
         &__card {
             width: 50%;
+        }
+
+        &__title{
+            font-size: 34px;
         }
 
         &__card-img {
@@ -189,18 +193,14 @@
 @media screen and (max-width: 470px) {
     .list {
         &__title {
-            font-size: 9vw;
-            padding: 25px 12px;
-            margin: 8px 0;
-            padding-top: 10px;
-        }
-
-        &__inner {
-            padding: 0;
+            margin-top: 0px;
+            padding: 40px 12px;
+            font-size: calc(18px + 3vmin);
+            text-align: center;
         }
 
         &__card-img {
-            width: 94%;
+            width: 85%;
             height: 60vw;
 
             &:hover {
@@ -208,9 +208,13 @@
             }
         }
 
+        &__card-episodes {
+            font-size: 13px;
+        }
+
         &__card-title {
-            width: 93%;
-            font-size: 20px;
+            width: 95%;
+            font-size: 18px;
         }
     }
 }
