--- a/src/components/list/List.scss
+++ b/src/components/list/List.scss
@@ -208,6 +208,10 @@
             }
         }
 
+        &__inner{
+            padding: 0;
+        }
+
         &__card-episodes {
             font-size: 13px;
         }
