--- a/src/components/list/List.scss
+++ b/src/components/list/List.scss
@@ -5,6 +5,7 @@
     background-color: #202125;
     min-height: 200vh;
     padding-bottom: 100px;
+
     &__arrow {
         width: 40px;
         position: fixed;
@@ -111,8 +112,7 @@
     }
 
     &__card-episodes {
-        color: rgb(233, 233, 233);
-        text-decoration: underline;
+        color: rgb(183, 183, 183);
         margin-right: 10px;
 
         &:last-child {
@@ -147,7 +147,7 @@
         }
 
         &__card {
-            width: 33%;
+            width: 33.33%;
         }
     }
 }
@@ -162,7 +162,7 @@
             width: 50%;
         }
 
-        &__title{
+        &__title {
             font-size: 34px;
         }
 
@@ -199,16 +199,31 @@
             text-align: center;
         }
 
+        &__cards{
+            justify-content: space-between;
+        }
+
+        &__card{
+            width: 49%;
+            margin-bottom: 20px;
+            align-items: flex-start;
+            &-content{
+                padding: 10px 5px 0 10px;
+            }
+        }
+
+        
+
         &__card-img {
-            width: 85%;
-            height: 60vw;
+            width: 100%;
+            height: calc(40vw + 95px);
 
             &:hover {
                 transform: none;
             }
         }
 
-        &__inner{
+        &__inner {
             padding: 0;
         }
 
