--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -68,7 +68,7 @@
 
 @media screen and (max-width: 470px) {
     .header {
-        padding: 5px 0;
+        padding: 10px 0;
 
         &__inner {
             padding: 0px 10px;
@@ -84,13 +84,16 @@
         }
 
         &__input {
-            width: 20%;
+            width: 40%;
+
             transition: 0.4s;
             position: absolute;
             right: 50px;
+            top: 11px;
 
             &:focus {
-                width: 70%;
+                display: block;
+                width: 75%;
                 transition: 0.4s;
             }
         }
