--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,9 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 .app {
     font-family: 'Montserrat', sans-serif;
     background-color: #202125;
