--- a/src/components/anime/Anime.scss
+++ b/src/components/anime/Anime.scss
@@ -3,6 +3,7 @@
     position: relative;
     top: 100px;
     background-color: #00000000;
+    min-height: 200vh;
 
     &__background {
         position: fixed;
