--- a/src/components/filters/Filters.scss
+++ b/src/components/filters/Filters.scss
@@ -2,7 +2,7 @@
     padding: 0 11px;
     color: #fff;
     margin-bottom: 30px;
-
+    z-index: 2;
     &__inner {
         background: linear-gradient(0deg, rgba(51, 53, 60, 0) 0, #33353c 30%, #33353c 100%);
         padding: 20px 40px;
